[COURTS-162] -- Temp fix to main mobile nav with sidebar nav on page overlap

--- a/web/modules/custom/jcc_elevated_custom/css/jcc-elevated-custom.css
+++ b/web/modules/custom/jcc_elevated_custom/css/jcc-elevated-custom.css
@@ -65,3 +65,6 @@ p + a {
 .sidebar-nav {
   z-index: 3 !important;
 }
+.mobile-nav {
+  position: relative !important;
+}
